fix: resolve double scroll

--- a/nx2/blocks/canvas/canvas.css
+++ b/nx2/blocks/canvas/canvas.css
@@ -47,6 +47,7 @@ nx-editor-doc {
 nx-editor-wysiwyg,
 nx-editor-doc {
   contain: layout;
+  overflow: hidden;
 }
 
 nx-editor-doc[hidden],
